# git-trial

./: CMakeLists.txt  CmakeLists.txt  README.md  main.cpp
Headers/: application_logic.h  error_handling.h  logger.h  memory_manager.h  pointer_safety.h  types.h
Sources/: application_logic.cpp  error_handling.cpp  logger.cpp  memory_manager.cpp  pointer_safety.cpp
